--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ ul {
 }
 
 .hide {
-  visibility: hidden;
+  transform: translateX(-110%);
 }
 
 .cta {
@@ -71,6 +71,7 @@ main {
   top: -30px;
   padding-top: 50px;
   color: white;
+  transition: transform 0.5s;
 }
 
 .index {
@@ -81,9 +82,11 @@ main {
 .services {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .services h1 {
   color: black;
+  margin-bottom: 50px;
 }
 
 .underlay {
@@ -95,6 +98,7 @@ main {
 
 .card {
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.9);
+  margin-bottom: 50px;
   position: relative;
   border-radius: 15px;
   background: white;
@@ -148,6 +152,70 @@ main {
   border-bottom-right-radius: 15px;
 }
 
+/* The Modal (background) */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1000;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  /* 15% from the top and centered */
+  border: 1px solid #888;
+  width: 90%;
+  /* Could be more or less, depending on screen size */
+}
+.modal-content .modal__header {
+  display: flex;
+  width: 100%;
+}
+.modal-content .service__modal {
+  background: url("../assets/services.jpg") center no-repeat;
+  height: 300px;
+  background-size: cover;
+}
+.modal-content .modal__body, .modal-content .modal__footer {
+  padding: 20px;
+}
+.modal-content .modal__footer {
+  background: #0D8AFF;
+  color: white;
+  font-size: 1.1em;
+}
+
+/* The Close Button */
+.close {
+  font-size: 2.5em;
+  padding: 10px 20px;
+  margin-left: auto;
+  font-weight: bold;
+  color: white;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 1024px) {
   body {
     padding-top: 200px;
@@ -172,6 +240,21 @@ main {
 
   .underlay {
     margin-top: 0;
+  }
+
+  .modal {
+    top: -170px;
+    height: calc(100% + 170px);
+  }
+
+  .modal-content .service__modal {
+    height: 600px;
+  }
+}
+@media screen and (min-width: 1345px) {
+  .modal {
+    top: -245px;
+    height: calc(100% + 250px);
   }
 }
 
