--- a/css/main.scss
+++ b/css/main.scss
@@ -244,11 +244,13 @@ main {
   }
 
   .heading__buttons {
+    margin-top: 50px;
     display: flex;
   }
 
   .underlay {
     margin-top: 0;
+    min-height: 600px;
   }
 
   .modal {
